// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Form renders a snpashot properly 1`] = `
<div>
  <h1
    className="title is-1"
  >
    Log In
  </h1>
  <hr />
  <br />
  <form
    onSubmit={[Function]}
  >
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="email"
        onChange={[Function]}
        placeholder="Enter an email address"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="password"
        onChange={[Function]}
        placeholder="Enter a password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <input
      className="button is-primary is-medium is-fullwidth"
      type="submit"
      value="Submit"
    />
  </form>
</div>
`;

exports[`Register Form renders a snpashot properly 1`] = `
<div>
  <h1
    className="title is-1"
  >
    Register
  </h1>
  <hr />
  <br />
  <form
    onSubmit={[Function]}
  >
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="username"
        onChange={[Function]}
        placeholder="Enter a username"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="email"
        onChange={[Function]}
        placeholder="Enter an email address"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="password"
        onChange={[Function]}
        placeholder="Enter a password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <input
      className="button is-primary is-medium is-fullwidth"
      type="submit"
      value="Submit"
    />
  </form>
</div>
`;
